@@ -1,0 +1,21 @@
+<com:TContent ID="body">
+
+<h1>TExpression Sample</h1>
+
+<table class="sampletable">
+
+<tr><td class="samplenote">
+Using expression component tag:
+</td><td class="sampleaction">
+<com:TExpression Expression="$this->Page->Head->Title" />
+</td></tr>
+
+<tr><td class="samplenote">
+Using shortcut expression tag:
+</td><td class="sampleaction">
+<%= $this->Page->PagePath %>
+</td></tr>
+
+</table>
+
+</com:TContent>
