@@ -1,0 +1,25 @@
+<com:TContent ID="body">
+
+<h1>TSafeHtml Samples</h1>
+
+<table class="sampletable">
+
+<tr><td class="samplenote">
+Safeguard a static string:
+</td><td class="sampleaction">
+<com:TSafeHtml>
+  <a href="javascript:alert();">javascript link stripped</a>
+</com:TSafeHtml>
+</td></tr>
+
+<tr><td class="samplenote">
+Safeguard the control rendering results:
+</td><td class="sampleaction">
+<com:TSafeHtml>
+  <com:TLiteral Text="<a>a nonclosing tag" />
+</com:TSafeHtml>
+</td></tr>
+
+</table>
+
+</com:TContent>
