@@ -1,0 +1,29 @@
+<com:TContent ID="body">
+
+<h1>TTextHighlighter Samples</h1>
+
+<table class="sampletable">
+
+<tr><td class="samplenote">
+Highlighting PHP statements:
+</td><td class="sampleaction">
+<com:TTextHighlighter ShowLineNumbers="true" EnableCopyCode="true">
+<?php
+$str = 'one|two|three|four';
+// will output an array
+print_r(explode('|', $str, 2));
+?>
+</com:TTextHighlighter>
+</td></tr>
+
+<tr><td class="samplenote">
+Highlighting control rendering results:
+</td><td class="sampleaction">
+<com:TTextHighlighter EnableCopyCode="false">
+<com:TLabel Text="this is a label" />
+</com:TTextHighlighter>
+</td></tr>
+
+</table>
+
+</com:TContent>
