@@ -7,6 +7,8 @@ BUG: Ticket#95 - Typo in TTemplateControl::registerContentPlaceHolder (Qiang)
 BUG: SF#1446846 - Typo in THead (Qiang)
 BUG: SF#1432624 - Incorrect documentation about caching expiry (Qiang)
 BUG: THttpSession fails when user storage module is used (Qiang)
+CHG: TTextHighlighter.EnableCopyCode defaults to false (Qiang)
+CHG: Reorganized quickstart tutorial demo, added new sections (Qiang)
 ENH: TDataFieldAccessor can access public class variables (Qiang)
 ENH: Pagers in TDataGrid are now enclosed within panels (Qiang)
 ENH: Ticket#92 - Support for user exception message file (Qiang)
